# TP2

./: CMakeLists.txt  mainBmp.c  mainMP.c  makefile
